--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "netflix",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.15.1",
+    "npm": "8.11.0"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
